--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+
+  font-family: 'Montserrat', sans-serif;
+  -webkit-tap-highlight-color: transparent;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: linear-gradient(to left, #4a4a4a, #404040);
+  box-shadow: inset 0 0 1px 1px #191919;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(to left, #555555, #4e4e4e);
+}
+::selection {
+  color: var(--bg-color);
+  background: var(--text-color);
+}
+:root {
+ 
+  --text-color: #f3f3f3;
+  --bg-color: #020202;
+  --gold-color:#ffd600f3;
+}
+
+body {
+  min-height: 100vh;
+  width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  line-height: 1.3;
+  color: var(--text-color);
+}
+
+p {
+  color: var(--text-color);
+  font-weight: 600;
+  margin: 5px;
+  line-height: 1.1;
+}
+
+label {
+  font-weight: 600;
+}
+
+li {
+  list-style: none;
+}
+
+hr {
+  background: #afacad;
+  border: none;
+  height: 1px;
+  margin: 4px 0;
+}
+
+a,
+a:hover,
+a:focus,
+a:active {
+  font-weight: 500;
+  text-decoration: none;
+}
+
+a {
+  color: #40335e;
 }
